<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="app_name">생활 속 안전</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="action_search">Sarch</string>

    <!-- Search -->
    <string name="search_hint">Search color..</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Find People</item>
        <item>Photos</item>
        <item>Communities</item>
        <item>Pages</item>
        <item>What\'s Hot</item>
    </string-array>
    <string-array name="nation">
        <item>국가명</item>
        <item>과테말라</item>
        <item>그리스</item>
        <item>나우루</item>
        <item>남아프리카</item>
        <item>네덜란드</item>
        <item>네팔</item>
        <item>대만</item>
        <item>대한민국</item>
        <item>덴마크</item>
        <item>독일</item>
        <item>라트비아</item>
        <item>러시아</item>
        <item>루마니아</item>
        <item>리투아니아</item>
        <item>마다가스카르</item>
        <item>말레이시아</item>
        <item>멕시코</item>
        <item>모로코</item>
        <item>미국</item>
        <item>미얀마</item>
        <item>방글라데시</item>
        <item>베트남</item>
        <item>벨기에</item>
        <item>보스니아</item>
        <item>북한</item>
        <item>불가리아</item>
        <item>브라질</item>
        <item>세르비아</item>
        <item>스리랑카</item>
        <item>스웨덴</item>
        <item>스위스</item>
        <item>스페인</item>
        <item>슬로바키아</item>
        <item>슬로베니아</item>
        <item>시리아</item>
        <item>아르헨티나</item>
        <item>아일랜드</item>
        <item>알바니아</item>
        <item>에스토니아</item>
        <item>영국</item>
        <item>오스트레일리아</item>
        <item>오스트리아</item>
        <item>우크라이나</item>
        <item>이스라엘</item>
        <item>이집트</item>
        <item>이탈리아</item>
        <item>인도</item>
        <item>인도네시아</item>
        <item>일본</item>
        <item>중국</item>
        <item>체코</item>
        <item>캄보디아</item>
        <item>캐나다</item>
        <item>크로아티아</item>
        <item>키프로스</item>
        <item>태국</item>
        <item>터키</item>
        <item>튀니지</item>
        <item>파키스탄</item>
        <item>페루</item>
        <item>포르투갈</item>
        <item>폴란드</item>
        <item>프랑스</item>
        <item>핀란드</item>
        <item>필리핀</item>
        <item>헝가리</item>
        <item>홍콩</item>
        <item>기타</item>
    </string-array>
    <string-array name="recall_nation_type">
        <item>리콜형태</item>
        <item>국내</item>
        <item>국외</item>
    </string-array>
    <string-array name="recall_type">
        <item>리콜타입</item>
        <item>권고에 따른</item>
        <item>명령에 따른</item>
        <item>자발적인</item>
    </string-array>
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons"></array>

    <string name="menu_settings">Settings</string>
    <string name="sp_goodslabel">"제품명 - "</string>
    <string name="sp_model_strlabel">"모델명 - "</string>
    <string name="totalcodeNamelabel">"인증기관 - "</string>
    <string name="sc_confirmNumlabel">"인증번호 - "</string>
    <string name="sc_confirmDaylabel">"인증일자 - "</string>
    <string name="sb_makingCompanylabel">"제조사 - "</string>
    <string name="sb_makingCountrylabel">"제조국 - "</string>
    <string name="sc_divisionlabel">"인증구분 - "</string>
    <string name="code3Namelabel">"제품분류 - "</string>
    <string name="sp_brandlabel">"브랜드명 - "</string>

</resources>